[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/ShipAnimatedEmpty.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Scripts/Eddie/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 55.1104
height = 320.502

[sub_resource type="CircleShape2D" id=2]
radius = 1568.37

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 125.824, 95.5476 )

[sub_resource type="Animation" id=4]
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Ship_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -22.6274, 0.652012 )
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hit_Box" type="Area2D" parent="."]
rotation = 1.5708
monitorable = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2( 0.707108, 22.5723 )
shape = SubResource( 1 )

[node name="Sight" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ram" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="Aiming" type="CollisionShape2D" parent="Ram"]
position = Vector2( 402.086, 5.46033 )
shape = SubResource( 3 )

[node name="Ram2" type="Area2D" parent="."]
position = Vector2( 268.197, -1.49831 )
collision_layer = 2
collision_mask = 2

[node name="ram_head" type="CollisionPolygon2D" parent="Ram2"]
position = Vector2( -274.19, -0.987541 )
polygon = PoolVector2Array( 285.995, 0.214233, 189.98, -42.2984, 196.988, 39.2937 )

[node name="duration" type="Timer" parent="Ram2"]

[node name="cooldown" type="Timer" parent="Ram2"]

[node name="Ship_Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerShip"
anims/PlayerShip = SubResource( 4 )

[connection signal="area_entered" from="Hit_Box" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_entered" from="Ram" to="." method="_on_Ram_body_entered"]
[connection signal="timeout" from="Ram2/duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="Ram2/cooldown" to="." method="_on_cooldown_timeout"]
